# mlops_hw1

./: README.md  docker-compose.yaml  pyproject.toml
.venv1/: pyvenv.cfg
app/: dashboard.py  main.py
app/api/: delete_model.py  health.py  models_list.py  predict.py  train.py
app/core/: logger.py  minio_client.py  model_manager.py
app/models/: logreg.pkl  rf.pkl
app/schemas/: schemas.py
minio_data/.minio.sys/: format.json
